components/UI/FooterBanner/FooterBanner.module.css
.footer {
  bottom: 24px;
  z-index: 998;
  margin: 10px;
  font-weight: 500;
  font-size: 0.7rem;
  position: absolute;
  text-align: center;
  color: white;
  left: 0;
  right: 0;
}

.footerWrapper {
  width: 100%;
  position: relative;
}

.footerWrapper :first-child {
  bottom: 0;
}

.footer .dismissible {
  position: relative;
  display: flex;
  border-radius: 8px;
  background-color: rgba(104, 13, 13, 0.9);
  padding: 1.7rem 0.8rem 0.8rem 0.8rem;
  text-align: center;
  width: 24rem;
  z-index: 999;
}

.footer .dismissible span {
  margin: auto;
}

.footer .dismissible .closeButton {
  position: absolute;
  right: 1px;
  top: 3px;
  bottom: 0;
  margin: auto;
  cursor: pointer;
}

.footer .dismissible svg {
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
}

/* Mobile */
@media (max-width: 700px) {
  .footer {
    margin-bottom: 0;
    padding-bottom: 0;
  }
  .footer .dismissible {
    width: 100%;
    padding: 1.7rem 1rem 1.3rem 1.3rem;
  }

  .footerWrapper {
    gap: 8px;
    display: flex;
    flex-direction: column;
  }
}

